--- a/lab12/lab9.html
+++ b/lab12/lab9.html
@@ -21,7 +21,7 @@
 
   <main>
     <section class="card">
-      <img src="FB_IMG_1760072536464.jpg" alt="รูปโปรไฟล์ตัวอย่าง">
+      <img src="72bec4e9-517a-4e5b-8107-66d774edcc73.jpg" alt="รูปโปรไฟล์ตัวอย่าง">
       <h2 id="profile-name">พลลภัตม์ ศรีหยัดแย้ม</h2>
       <p class="bio">นักพัฒนาเว็บไซต์ที่ชื่นชอบการเรียนรู้สิ่งใหม่ๆ และรักการนอนหลับ</p>
 
